--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ mod_name=Dementia
 mod_license=All Rights Reserved
 mod_version=1.0.0a
 mod_group_id=com.r4mble.dementia
-mod_authors=R4mBLe_
+mod_authors=R4mBLe_, UltrMegaGigaChad
 mod_description=Add dementia in minecraft
