--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 minecraft_version=1.20.6
@@ -11,7 +10,7 @@ mapping_version=1.20.6
 mod_id=dementia
 mod_name=Dementia
 mod_license=All Rights Reserved
-mod_version=1.0.0a
+mod_version=1.0.0
 mod_group_id=com.r4mble.dementia
 mod_authors=R4mBLe_, UltrMegaGigaChad
-mod_description=Add dementia in minecraft
+mod_description=Adds dementia in minecraft
