--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,6 +8,7 @@ version="${mod_version}"
 displayName="${mod_name}"
 authors="${mod_authors}"
 description='''${mod_description}'''
+displayURL="https://github.com/R4mBLeR/DementiaMod"
 [[dependencies.${mod_id}]]
     modId="forge"
     mandatory=true
