--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ mapping_version=1.20.1
 mod_id=dementia
 mod_name=Dementia
 mod_license=All Rights Reserved
-mod_version=1.0.2
+mod_version=1.0.2a
 mod_group_id=com.r4mble.dementia
 mod_authors=R4mBLe_, UltrMegaGigaChad
 mod_description=Adds dementia in minecraft
