--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 minecraft_version=1.21.1
 minecraft_version_range=[1.21.1,1.22)
-forge_version=52.0.2
+forge_version=52.0.9
 forge_version_range=[0,)
 loader_version_range=[0,)
 mapping_channel=official
@@ -10,7 +10,7 @@ mapping_version=1.21.1
 mod_id=dementia
 mod_name=Dementia
 mod_license=All Rights Reserved
-mod_version=1.0.4a
+mod_version=1.0.4b
 mod_group_id=com.r4mble.dementia
 mod_authors=R4mBLe_, UltrMegaGigaChad
 mod_description=Adds dementia in minecraft
