--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 
 
-version = '1.0.5'
+version = '2.0-mc1.18.2'
 group = 'com.r4mble.dementia'
 archivesBaseName = 'dementia'
 
