--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ mapping_version=1.21.1
 mod_id=dementia
 mod_name=Dementia
 mod_license=All Rights Reserved
-mod_version=1.0.4c
+mod_version=1.0.5
 mod_group_id=com.r4mble.dementia
 mod_authors=R4mBLe_, UltrMegaGigaChad
 mod_description=Adds dementia in minecraft
