--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 minecraft_version=1.21.4
 minecraft_version_range=[1.21.4,1.22)
-forge_version=54.0.18
+forge_version=54.1.0
 forge_version_range=[0,)
 loader_version_range=[0,)
 mapping_channel=official
@@ -10,7 +10,7 @@ mapping_version=1.21.4
 mod_id=dementia
 mod_name=Dementia
 mod_license=All Rights Reserved
-mod_version=2.1-mc1.21.4
+mod_version=2.1-mc1.21.4a
 mod_group_id=com.r4mble.dementia
 mod_authors=R4mBLe_, UltrMegaGigaChad
 mod_description=Adds dementia in minecraft
